--- a/package.json
+++ b/package.json
@@ -32,12 +32,20 @@
     "dist"
   ],
   "dependencies": {
+    "@supabase/supabase-js": "^2.4.0",
+    "@types/qs": "^6.9.7",
+    "animated-gif-detector": "^1.2.0",
     "app-root-path": "^3.0.0",
     "cors": "^2.8.5",
+    "current-url": "^2.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "get-port": "^5.1.1",
+    "imagemin-pngquant": "^9.0.2",
     "lusca": "^1.7.0",
+    "qs": "^6.11.0",
+    "sharp": "^0.31.3",
+    "smartcrop-sharp": "^2.0.7",
     "timestring": "^6.0.0"
   },
   "devDependencies": {
@@ -54,11 +62,13 @@
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.3",
+    "@types/blob-to-buffer": "^1.2.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/lusca": "^1.7.1",
     "@types/node": "^17.0.31",
+    "@types/sharp": "^0.31.1",
     "@types/timestring": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
