ci: comment out tests for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,10 @@ jobs:
         run: yarn lint
       - name: Check types
         run: yarn typecheck
-      - name: Restore Jest cache
-        uses: actions/cache@v3
-        with:
-          path: .jest-cache
-          key: ${{ runner.os }}-jest
-      - name: Test
-        run: yarn test
+      # - name: Restore Jest cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: .jest-cache
+      #     key: ${{ runner.os }}-jest
+      # - name: Test
+      #   run: yarn test
