--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/qs": "^6.9.7",
     "animated-gif-detector": "^1.2.0",
     "app-root-path": "^3.0.0",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "current-url": "^2.1.2",
     "dotenv": "^16.0.1",
@@ -63,6 +64,7 @@
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.3",
     "@types/blob-to-buffer": "^1.2.0",
+    "@types/connect-timeout": "^0.0.36",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
