--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/jest": "^29.0.0",
     "@types/lusca": "^1.7.1",
     "@types/node": "^17.0.31",
+    "@types/node-fetch": "^2.6.1",
     "@types/sharp": "^0.31.1",
     "@types/timestring": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
@@ -87,6 +88,7 @@
     "esm": "^3.2.25",
     "husky": "^4.2.5",
     "jest": "^29.0.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.8.2",
     "rimraf": "^3.0.2",
     "semantic-release": "^19.0.5",
