--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "current-url": "^2.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "file-type": "^16.5.3",
     "get-port": "^5.1.1",
     "imagemin-pngquant": "^9.0.2",
     "lusca": "^1.7.0",
@@ -67,6 +68,7 @@
     "@types/connect-timeout": "^0.0.36",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
+    "@types/file-type": "^10.9.1",
     "@types/jest": "^29.0.0",
     "@types/lusca": "^1.7.1",
     "@types/node": "^17.0.31",
