--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .yalc
 yalc.lock
 node_modules/
+package-lock.json
 
 # Build
 dist/
@@ -22,3 +23,7 @@ coverage/
 
 # Vi
 *.swp
+
+# Deployment
+__deployer__.zip
+.deployed
